LIST OF CHANGES
---------------

release 6.4.0
 - iseq_external_product_component table redesign to allow for
   rows on iseq_product_metrics table to be deleted and recreated
   without making data in the linking table invalid
 - code to creating rows in the iseq_external_product_component table,
   which will be run on row creation the and sometimes on row update
   for rows of the iseq_external_product_metrics table; this code will
   also be used to create a backlog of linking rows for existing
   iseq_external_product_metrics table rows

release 6.3.0
 - table update for iseq_external_product_metrics:
   drops id_iseq_pr_metrics_tmp and a foreign key based on it
     since maintenence will be difficult,
   adds index on id_iseq_product to enable using this column
     in joining to iseq_product_metrics table on a similar column,
   adds an indexed id_run column in case stats by run is needed
 - insert and update DBIx IseqExternalProductMetric class
   customisation to ensure that composition data and id_run
   columns are filled in

release 6.2.1
 - nrd_assessment column comment update: include 'NA' as a valid value

release 6.2
 - update definition of iseq_external_product_metric table
   - fastqc columns become varchars
   - rename column qc to qc_overall_assessment
   - new column qc_status
 - update DBIx classes to match new table definition

release 6.1
 - update DBIx classes from prod database
 - update definition of iseq_external_product_metric table

release 6.0
 - add new tables for externally processed data

releaes 5.1
 - allow to store longer composition JSON strings in the iseq_product_metrics
   table

release 5.0
 - added target autosome fields to iseq_product_metrics
 - added DBIx binding for the bmap_flowcell table for the
   BioNano Saphyr instrument

release 4.0
 - iseq_product_metrics table: make id_iseq_product column not nullable,
     set unique constraint on it
 - a new table iseq_product_components - linking table for product records